[metadata]
name = pylbi
version = attr: pylbi.__version__
author = Felipe Calliari
author_email = calliari@puc-rio.br
url = https://github.com/FelipeCalliari/pylbi
license = LGPL v3
license-file = LICENSE
description = Python implementation of Linearized Bregman Iterations
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
project_urls =
    Bug Tracker = https://github.com/FelipeCalliari/pylbi/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src